Import of TAGOMORIS/Net-Hadoop-HuahinManager-0.02 from CPAN.
gitpan-cpan-distribution: Net-Hadoop-HuahinManager
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TAGOMORIS/Net-Hadoop-HuahinManager-0.02.tar.gz
gitpan-cpan-author:       TAGOMORIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl module Net::Hadoop::HuahinManager
 
+0.02  Mon Oct 22 12:32:24 JST 2012
+   - update bundled Module::Install to 1.06
+
 0.01  Tue Jun 26 13:31:16 JST 2012
    - original version
